--- a/week-one/package.json
+++ b/week-one/package.json
@@ -2,5 +2,13 @@
   "dependencies": {
     "npm": "^8.19.2",
     "underscore": "^1.13.6"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.20"
+  },
+  
+  "scripts": {
+    "start": "nodemon script.js",
+    "test": "echo\"Error: no test specified\"&& exit 1"
   }
 }
