--- a/week-two/package.json
+++ b/week-two/package.json
@@ -10,9 +10,10 @@
   "author": "Leo",
   "license": "ISC",
   "dependencies": {
+    "cors": "^2.8.5",
     "express": "^4.18.2"
   },
   "devDependencies": {
-    "nodemon":"2.0.20"
+    "nodemon": "2.0.20"
   }
 }
